# routes/web.php
@@ -95,6 +95,7 @@ Route::post('api/v1/auth', [V1AuthController::class, 'login']);
 Route::post('api/v1/auth/recuperar', [V1AuthController::class, 'recuperar']);
 Route::get('api/v1/auth/me', [V1AuthController::class, 'me']);
 Route::post('api/v1/usuarios', [V1AuthController::class, 'store']);
+Route::put('api/v1/usuarios/password', [V1AuthController::class, 'password']);
 Route::get('api/v1/cursos', [V1CursoController::class, 'index']);
 Route::post('api/v1/cursos', [V1CursoController::class, 'store']);
 Route::get('api/v1/cursos/{id}', [V1CursoController::class, 'show']);
